# oidc-init

./: .gitignore  CLAUDE.md  Makefile  README.md  SDK_USAGE.md  compose.yaml  go.mod  go.sum  main.go  pixi.toml  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: release.yml  test.yml
cmd/: gui_disabled.go  gui_enabled.go  init.go  profile.go  root.go  token.go
internal/auth/: auth.go  auth_test.go
internal/deviceflow/: deviceflow.go  deviceflow_integration_test.go  deviceflow_test.go
internal/gui/: assets.go  gui.go  theme.go
internal/passwordflow/: passwordflow.go  passwordflow_test.go
internal/profiles/: profiles.go  profiles_test.go
internal/storage/: storage.go  storage_integration_test.go  storage_test.go
oidc_init/: __init__.py  auth.py  cli.py  device_flow.py  profiles.py  storage.py
scripts/: README.md  setup_keycloak.py  setup_keycloak.sh
sdks/java/: README.md  build.gradle.kts  settings.gradle.kts
sdks/java/src/main/java/com/github/tokoko/oidc/: CliRunner.java  JsonParser.java  OidcClient.java  TokenData.java  TokenReader.java
sdks/java/src/main/java/com/github/tokoko/oidc/exceptions/: AuthenticationException.java  CLINotFoundException.java  OidcException.java  ProfileNotFoundException.java  StorageException.java  TokenNotFoundException.java
sdks/java/src/test/java/com/github/tokoko/oidc/: CliRunnerTest.java  JsonParserTest.java  OidcClientTest.java  TestHelpers.java  TokenReaderTest.java
sdks/python/: README.md  pyproject.toml
sdks/python/oidc_init/: __init__.py  cli.py  reader.py
sdks/python/tests/: conftest.py  helpers.py  test_init.py  test_reader.py
tests/: conftest.py  test_integration.py  test_storage.py
